client/src/App.css
/* height of the container */
.leaflet-container {
  height: 100vh;
  width: 100%;
  border-radius: 0;
  margin-top: 28px;
}
.navbar {
  border-radius: 0;
}
.float{
  float: left;
}
.navbar-container {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;
}
.navbar-brand, .sidebar .nav-link {
  font-family: Arial, sans-serif;
  font-size: 1rem;
}
.sidebar {
  position: fixed;
  top: 81px;
  left: 0;
  width: 200px;
  height: calc(100% - 56px);
  overflow-y: auto;
  z-index: 500;
}
.main-content {
  margin-left: 192px;
  margin-top: 56px;
  height: calc(100vh - 56px);
  overflow-y: auto; 
}
.custom-text {
  font-weight: bold; 
  font-size: 18px;
  color: #f0ad4e;
}

/* Welcome Page */
.welcome-modal {
  display: flex;
  flex-direction: column;
  justify-content: center; 
  align-items: center; 
  height: 100vh; 
  background-color: #f0ad4e;
}
.welcomelogo {
  max-width: 100%; 
  margin-bottom: 20px;
  max-height:70vh;
}
.button-container {
  display: flex;
}
.welcome-modal button {
  height:8vh;
  width:20vh;
  padding: 10px 20px; 
  font-size: 16px; 
  cursor: pointer;
  margin:1vw;
}
.welcome-modal button:hover {
  background-color: black;
  color:white;
}

